# pylgnt

./: README.md  pyproject.toml
pylgnt/: __init__.py  book_mappings.py  book_titles.py  constants.py  decompose.py  download.py  download_url.py  filter_string.py  get_dataframes.py  get_encoding.py  get_filepaths.py  get_nan.py  handle_convert.py  handle_download.py  handle_extract.py  main.py  normalize.py  normalize_greek.py  read_tsv.py  recode.py  to_utf8.py
pylgnt/codepoints/: fix.py
pylgnt/commands/alphabet/: main.py
pylgnt/commands/convert/: main.py
pylgnt/commands/download/: main.py
pylgnt/commands/extract/: main.py
pylgnt/commands/info/: main.py
pylgnt/commands/normalize/: main.py
pylgnt/constants/: names.py  urls.py
pylgnt/constants/codepoints/: greek.py  hebrew.py
pylgnt/constants/mappings/book/: new.py  old.py
pylgnt/constants/mappings/codepoint/: greek.py
workflows/: main.yml
