[tool.poetry]
name = "pylgnt"
version = "0.1.0"
description = "A command line tool for downloading data from www.livinggreeknt.org"
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
cchardet = "^2.1.7"
transliterate = "^1.10.2"

[tool.poetry.scripts]
lgnt = "pylgnt.__init__:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
